# mde-lr

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  architecture.md  roadmap.md  rust-toolchain.toml
.github/workflows/: ci.yml
manifest/: README.md  endpoints.toml
scripts/: Invoke-VerboseTraceroute.ps1
src/: action.rs  alerts.rs  auth.rs  client.rs  error.rs  lib.rs  library.rs  live_response.rs  machine_actions.rs  machines.rs  main.rs
tests/: alerts_flow.rs  library_flow.rs  live_response_flow.rs  machine_actions_flow.rs  machines_flow.rs  manifest_validation.rs
