[package]
name = "mde-lr"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1"
clap = { version = "4.5.58", features = ["derive", "env"] }
reqwest = { version = "0.13.2", features = ["json", "form"] }
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0"
serde_urlencoded = "0.7"
tokio = { version = "1.49.0", features = ["full"] }

[dev-dependencies]
wiremock = "0.6"
